--- a/app/assets/stylesheets/main/today.scss
+++ b/app/assets/stylesheets/main/today.scss
@@ -91,6 +91,9 @@
     margin: 24px 16px;
     font-weight: 900;
     font-size: 18pt;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .today .tasks-container {
@@ -126,6 +129,9 @@
     font-size: 14pt;
     font-weight: bold;
     margin: 10px auto 16px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .today .task-card .description {
